    <https://github.com/jhy/jsoup/pull/2017>

  * Improvement: when changing the OutputSettings syntax to XML, the xhtml EscapeMode is automatically set by default.

  * Improvement: added the `:is(selector list)` pseudo-selector, which finds elements that match any of the selectors in
    the selector list. Useful for making large ORed selectors more readable.

  * Bugfix: when outputting with XML syntax, HTML elements that were parsed as data nodes (<script> and <style>) should
    be emitted as CDATA nodes, so that they can be parsed correctly by an XML parser.
    <https://github.com/jhy/jsoup/pull/1720>

  * Bugfix: the Immediate Parent selector `>` could match elements above the root context element, causing incorrect
    elements to be returned when used on elements other than the root document.
    <https://github.com/jhy/jsoup/issues/2018>

  * Bugfix: in a sub-query such as `p:has(> span, > i)`, combinators following the `,` Or combinator would be
    incorrectly skipped, such that the sub-query was parsed as `i` instead of `> i`.
    <https://github.com/jhy/jsoup/issues/1707>

  * Bugfix: in W3CDom, if the jsoup input document contained an empty doctype, the conversion would fail with a
    DOMException. Now, said doctype is discarded, and the conversion continues.

Release 1.16.2 [20-Oct-2023]
  * Improvement: optimized the performance of complex CSS selectors, by adding a cost-based query planner. Evaluators
    are sorted by their relative execution cost, and executed in order of lower to higher cost. This speeds the
    matching process by ensuring that simpler evaluations (such as a tag name match) are conducted prior to more
    complex evaluations (such as an attribute regex, or a deep child scan with a :has).

  * Improvement: added support for <svg> and <math> tags (and their children). This includes tag namespaces and case
    preservation on applicable tags and attributes.
    <https://github.com/jhy/jsoup/pull/2008>
